--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,10 +6,12 @@
   &copy;{{ .Site.Copyright }} Glen Campbell.
 {{ end }}
 All rights reserved.
+Project by <a href="http://colophon.xyz">Colophon</a>.
 <span class="right-menu">
 <a href="/tags.html" title="Tags">Tags</a>
 <a href="/tos.html" title="Terms of Service">TOS</a>
 <a href="/about.html" title="About this site">About</a>
+</span>
 </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
