added recipe section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,8 @@
 This is where I write about things that interest me.
 Hopefully, readers might occasionally find it interesting, too.
 I write mostly about things that happen in my life: personal history,
-music, software, travel, photography, and occasional forays into politics
+music, software, travel, photography, cooking,
+and occasional ill-advised forays into politics
 (though I have to say that politics is a subject that should
 generally be avoided, because it tends to overshadow
 everything else that's useful or interesting).</p>
