changed to use HTTPS

--- a/static/galliard.css
+++ b/static/galliard.css
@@ -1,4 +1,4 @@
-@import url('http://fast.fonts.net/cssapi/5a35d5b7-f434-4e08-804e-b3447396894a.css');
+@import url('https://fast.fonts.net/cssapi/5a35d5b7-f434-4e08-804e-b3447396894a.css');
 
 body {
 font-family:'ITC Galliard W01';
