--- a/static/galliard.css
+++ b/static/galliard.css
@@ -2,9 +2,9 @@
 
 body {
 font-family:'ITC Galliard W01';
-background: #fffff8;
+background: #FFFFF8;
 color: #111;
-max-width: 40em;
+max-width: 42em;
 font-size: 14pt;
 margin: auto;
 padding: 0 1em 0 1em;
