--- a/static/galliard.css
+++ b/static/galliard.css
@@ -2,7 +2,7 @@
 
 body {
 font-family:'ITC Galliard W01';
-background: #FFFFF8;
+background: white; 
 color: #111;
 max-width: 42em;
 font-size: 14pt;
