fixing file names

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
   &copy;{{ .Site.Copyright }} Glen Campbell.
 {{ end }}
 All rights reserved.
-Project by <a href="http://colophon.xyz">Colophon</a>.
+Project by <a href="http://broadpool.com">Broadpool</a>.
 <span class="right-menu">
 <a href="/tags.html" title="Tags">Tags</a>
 <a href="/tos.html" title="Terms of Service">TOS</a>
