--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 {{ partial "head.html" . }}
 <link rel="alternate" href="http://galliard.xyz/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
 <style>
-@import url('/galliard.css');
+@import url('/glenc.css');
 </style>
 </head>
 <body lang="en">
