--- a/static/glenc.css
+++ b/static/glenc.css
@@ -1,5 +1,7 @@
 @import url('//fast.fonts.net/cssapi/5a35d5b7-f434-4e08-804e-b3447396894a.css');
 
+/* glenc.css: my style sheet */
+
 body {
 font-family:'ITC Galliard W01';
 background: white; 
