--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
 <title>{{ .Site.Title }}: {{ .Title }}</title>
 {{ partial "head.html" . }}
 <style>
-@import url('/galliard.css');
+@import url('/glenc.css');
 </style>
 </head>
 <body lang="en">
