added intriguing comment

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>{{ .Site.Title }}</title>
+<!--
+---- This is the blog/website of Glen Campbell.
+---- Please stay tuned to this comment section.
+---- Something is happening.
+-->
 {{ partial "head.html" . }}
 <link rel="alternate" href="http://galliard.xyz/index.xml" type="application/rss+xml" title="{{ .Site.Title }}">
 <style>
