--- a/static/glenc.css
+++ b/static/glenc.css
@@ -106,7 +106,7 @@ font-size: 56pt;
 height: 48pt;
 line-height: 41pt;
 #color: #039;
-color: red;
+color: gray;
 padding-right: 2pt;
 }
 article blockquote {
