--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,15 +17,15 @@
 <h1 class="home">{{ .Site.Title }}</h1>
 <hr>
 <article class="home">
-<p>Welcome to <a href="/about.html">my website</a>.
-This is where I write about things that interest me.  Hopefully,
-readers might occasionally find it interesting, too.  I write mostly
-about things that happen in my life: personal history, music,
-software, travel, <a href="https://glencampbell.photography" title="My
-photography website">photography</a>, cooking, and occasional
-ill-advised forays into politics (though I have to say that politics
-is a subject that should generally be avoided, because it tends to
-overshadow everything else that's useful or interesting).</p>
+<p>Welcome to <a href="/about.html">my website</a>.  This is where
+I write about things that interest me.  Hopefully, readers might
+occasionally find it interesting, too.  I write mostly about things
+that happen in my life: personal history, music, software, travel,
+<a href="http://glenc.photos" title="My photography
+website">photography</a>, cooking, and occasional ill-advised forays
+into politics (though I have to say that politics is a subject that
+should generally be avoided, because it tends to overshadow everything
+else that's useful or interesting).</p>
 
 <hr>
 
