--- a/static/glenc.css
+++ b/static/glenc.css
@@ -1,9 +1,13 @@
-@import url('//fast.fonts.net/cssapi/5a35d5b7-f434-4e08-804e-b3447396894a.css');
+/*@import url('//fast.fonts.net/cssapi/5a35d5b7-f434-4e08-804e-b3447396894a.css');
+
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap');
 
 /* glenc.css: my style sheet */
 
 body {
-font-family:'ITC Galliard W01';
+/*font-family:'ITC Galliard W01';*/
+font-family: 'Cormorant Garamond', serif;
 background: white; 
 color: #111;
 max-width: 42em;
@@ -44,7 +48,7 @@ letter-spacing: -1pt;
 line-height: 120%;
 margin-top: 64pt;
 margin-bottom: 64pt;
-font-weight: normal;
+font-weight: bold;
 font-style: italic;
 }
 h1.home {
